# market-news-mvp

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
.github/workflows.example/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_api_key_events.py  0003_user_stripe.py
backend/app/: auth.py  config.py  db.py  db_migrate.py  main.py  models.py  schemas.py
backend/app/api/: api_keys.py  assets.py  auth.py  billing.py  brief.py  events.py  features.py  intel.py  market.py  mood.py  news.py  signal.py  v1.py  watchlist.py  ws.py
backend/app/data/: mock_events.json  mock_news.json
backend/app/services/: broadcaster.py  crypto_ws.py  events_fetcher.py  indicators.py  market_fetcher.py  news_fetcher.py  plans.py  rate_limit.py  rss_fetcher.py  sentiment.py  signal_engine.py  stripe_client.py
backend/app/services/advanced/: contradiction.py  countdown.py  liquidity.py  replay.py  smart_money.py  stress.py
backend/app/services/features/: bets.py  boring.py  calibration.py  consensus.py  contagion.py  correlation.py  digest.py  narrative.py  patterns.py  personality.py  silence.py  sources.py  timemachine.py
backend/app/workers/: scheduler.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  features.ts  useRealtime.ts
frontend/src/auth/: AuthContext.tsx
ml/: README.md  sentiment_baseline.py  signal_formula.py
(+22 files in other folders)
