[project]
name = "mni-backend"
version = "0.1.0"
description = "Market News Intelligence MVP backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "vaderSentiment>=3.3.2",
  "yfinance>=0.2.40",
  "pandas>=2.1",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "websockets>=12.0",
  "bcrypt>=4.1",
  "PyJWT>=2.8",
  "email-validator>=2.1",
  "feedparser>=6.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "redis>=5.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
